$Id$

2022-02-01  Christian Franke  <franke@computer.org>

	autogen.sh: automake 1.16.3-5 work.

	os_win32/update-smart-drivedb.nsi: Remove, no longer used.
	Makefile.am: Remove related targets.

	os_win32/installer.nsi: Install update-smart-drivedb.ps1.
	Delete update-smart-drivedb.exe.  Remove outdated delete commands.

	os_win32/update-smart-drivedb.ps1.in: New drivedb.h update script.
	It verifies the downloaded drive database with GnuPG (#752).
	Makefile.am: Add new file.

2022-01-29  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: fix issue with Zoned block device
	statistics lpage specific to the WDC DC HC650
	SAS ZBC disk. Visible with smartctl -x

2022-01-28  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.cpp,scsiprint.cpp: the "Long (extended)
	Self-test duration" at the end of smartctl -a output
	comes from a 16 bit field holding seconds. If the
	value is 0xffff the spec now says to consult the
	Extended Inquiry VPD page which has a similar field
	but the unit is minutes. Tweak the output if the
	duration exceeds 14400 seconds: calculate hours
	in brackets [normally minutes]. Reason: my 20 TB
	disk reports 38.7 hours to do a long self-test!

2022-01-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: my tape drive gives a nuisance TapeAlert
	warning after each power cycle. With '-xj' output this
	leads a a JSON array with a lot of 'null' entries. Change
	the JSON indexing so it is compact and add a
	'descriptor_idx' attribute if the position is important
	to the end user. In the case of TapeAlert the relative
	position is the degree of seriousness. Change TapeAlert
	'code' name to 'parameter_code'.

2022-01-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: small cleanup on (tape) device
	statistics lpage (plain and json)

2022-01-09  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp, add smartctl -x output (plain+json) for
	the (tape) device statistics lpage and the Zoned block